# imu

./: .gitignore  DEVELOPMENT_GUIDE.md  NOTICE.md
clean_workspace/: .dockerignore  DEVELOPMENT.md  Dockerfile  README.md  README_PRODUCTION.md  app.py  debug_api_response.py  debug_pipeline_output.py  debug_stance.py  debug_stance_new.py  dev.py  dev_import_check.py  hip_torque_core.code-workspace  optimize_thresholds.py  pyproject.toml  requirements.txt  run_clean_pipeline.py  test_api.py  test_bilateral.py  test_biomech_detection.py  test_biomech_enhanced.py  test_calibration_windows.py  test_final_api.py  test_pipeline_calibration.py  test_time_arrays.py
clean_workspace/analysis_out/: left_hip_cycle.csv  left_knee_cycle.csv  right_hip_cycle.csv  right_knee_cycle.csv
clean_workspace/core/: __init__.py
clean_workspace/docs/: ROM_Torque_Pipeline.md  hip_torque_math.md
clean_workspace/imu-gait-diagnostics/: README.md
clean_workspace/sample data/: DEMO6_0_20250209_221452_176.csv  DEMO6_1_20250209_221452_178.csv  DEMO6_2_20250209_221452_174.csv  DEMO6_3_20250209_221452_179.csv  DEMO6_4_20250209_221452_177.csv
clean_workspace/scripts/: check_cycles.py  dev.ps1  probe.ps1  serve.py  stop-port.ps1
clean_workspace/static/: index.html
clean_workspace/tests_clean/: test_angle_unwrap.py  test_baseline.py  test_baseline_extras.py  test_drift_and_torque.py  test_drift_on_sample.py  test_inverse_dynamics_sanity.py  test_io_fallback.py  test_joint_angles.py  test_kinematics_gimbal.py  test_lowfs_detector_meta.py  test_smoke_sample.py  test_yaw_reference.py
(+35 files in other folders)
